create ideas schema, ran swagger gen
