# restapi/operations/idea_post/put_idea_uuid_rate_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package idea_post
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"devsmake/models"
+)
+
+// PutIdeaUUIDRateOKCode is the HTTP code returned for type PutIdeaUUIDRateOK
+const PutIdeaUUIDRateOKCode int = 200
+
+/*PutIdeaUUIDRateOK the idea post which was rated
+
+swagger:response putIdeaUuidRateOK
+*/
+type PutIdeaUUIDRateOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Idea `json:"body,omitempty"`
+}
+
+// NewPutIdeaUUIDRateOK creates PutIdeaUUIDRateOK with default headers values
+func NewPutIdeaUUIDRateOK() *PutIdeaUUIDRateOK {
+
+	return &PutIdeaUUIDRateOK{}
+}
+
+// WithPayload adds the payload to the put idea Uuid rate o k response
+func (o *PutIdeaUUIDRateOK) WithPayload(payload *models.Idea) *PutIdeaUUIDRateOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the put idea Uuid rate o k response
+func (o *PutIdeaUUIDRateOK) SetPayload(payload *models.Idea) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PutIdeaUUIDRateOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*PutIdeaUUIDRateDefault error
+
+swagger:response putIdeaUuidRateDefault
+*/
+type PutIdeaUUIDRateDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewPutIdeaUUIDRateDefault creates PutIdeaUUIDRateDefault with default headers values
+func NewPutIdeaUUIDRateDefault(code int) *PutIdeaUUIDRateDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PutIdeaUUIDRateDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the put idea UUID rate default response
+func (o *PutIdeaUUIDRateDefault) WithStatusCode(code int) *PutIdeaUUIDRateDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the put idea UUID rate default response
+func (o *PutIdeaUUIDRateDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the put idea UUID rate default response
+func (o *PutIdeaUUIDRateDefault) WithPayload(payload *models.Error) *PutIdeaUUIDRateDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the put idea UUID rate default response
+func (o *PutIdeaUUIDRateDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PutIdeaUUIDRateDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
